# git2-rs

libgit2-sys/: Cargo.toml
