[package]

name = "libgit2-sys"
version = "0.4.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "git2"
build = "build.rs"
repository = "https://github.com/alexcrichton/git2-rs"
license = "MIT/Apache-2.0"
description = "Native bindings to the libgit2 library"

[lib]
name = "libgit2_sys"
path = "lib.rs"

[dependencies]
libssh2-sys = { version = ">= 0", optional = true }
libc = "0.2"
libz-sys = ">= 0"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1.2"
gcc = "0.3"

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.7", optional = true }

[features]
ssh = ["libssh2-sys"]
https = []
